--- a/TweetScreenshotApp.csproj
+++ b/TweetScreenshotApp.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    </PropertyGroup>
+
+    <PropertyGroup>
+        <PlaywrightPlatform>all</PlaywrightPlatform>
     </PropertyGroup>
 
     <ItemGroup>
